--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "puppeteer": "^19.7.2"
+    "puppeteer": "^19.7.2",
+    "freeport": "^1.0.5",
+    "proxy-chain": "^2.5.1"
   }
 }
